# MovieDb

./: .gitignore  readme.md
backend/: .gitignore  Cargo.toml  Dockerfile  compose.yml  servers.json
backend/migrations/: 20250707190613_initial.sql  20250708125745_add_time_to_rating.sql  20250727153056_night_only_has_one_movie.sql  20250727171927_people_now_always_have_names.sql  20250727192414_add_more_movie_details.sql  20250802190342_add_watchlists.sql  20250802191507_fix_nullability_for_watchlists.sql  20250806112308_add_columns_for_memento_import.sql  20250811101140_add_extra_night_data.sql  20250816094948_even_move_movie_cols.sql
backend/src/: main.rs
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: CompletionSearch.svelte  MovieDetailsPane.svelte  MovieList.svelte  WatchlistAdderPopup.svelte  app.html
frontend/src/components/: Chart.svelte  CompletionSearch.svelte  FetchingCompletionSearch.svelte
frontend/src/dataViews/: MovieDetails.svelte
frontend/src/lib/: app.css  index.svelte.ts
frontend/src/lib/services/: movieService.ts  types.ts  watchlistService.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/actor/[name]/: +page.svelte  +page.ts
frontend/src/routes/createNight/: +page.svelte
frontend/src/routes/movie/[id]/: +page.svelte
frontend/src/routes/night/[id]/: +page.svelte  +page.ts
frontend/src/routes/person/: +page.svelte  +page.ts
frontend/src/routes/person/[id]/: +page.svelte  +page.ts
frontend/src/routes/watchlist/: +page.svelte  +page.ts
frontend/static/: app.css
(+2 files in other folders)
